admin register to nacos as service discovery server and configure server

--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -11,6 +11,12 @@ server:
 
 spring:
   # 环境 dev|test|prod
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
   profiles:
     active: dev
   # jackson时间格式化
@@ -37,6 +43,7 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+
 #  resources:
 #    add-mappings: false
 
