--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -59,6 +59,11 @@
       <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-commons</artifactId>
+      <version>2.2.1.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.validation</groupId>
