--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -12,9 +12,18 @@ spring:
         server-addr: 127.0.0.1:8848
 
 mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      ## configure logic delete flag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
 server:
   port: 10000
+logging:
+  level:
+    com.bp.gulimall: debug
