--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
